--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Catch The Thief</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0">
     <style>
         html, body {
             height: 100%;
@@ -12,6 +12,7 @@
             background-color: black;
             touch-action: none;
             text-align: center;
+            overflow: hidden; /* Prevent scrollbars */
         }
 
         #unity-container {
@@ -19,12 +20,14 @@
             width: 100%;
             height: 100%;
             background-color: black;
+            overflow: hidden; /* Prevent canvas overflow */
         }
 
         #unity-canvas {
             display: block;
             margin: 0 auto;
             background-color: black;
+            image-rendering: auto; /* Ensure crisp scaling */
         }
 
         #unity-canvas:focus {
@@ -137,20 +140,84 @@
         <canvas id="unity-canvas" tabindex="1"></canvas>
     </div>
     <script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/CatchTheThiefWeb.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/CatchTheThiefWeb.data",
-        frameworkUrl: buildUrl + "/CatchTheThiefWeb.framework.js",
-        codeUrl: buildUrl + "/CatchTheThiefWeb.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Catch The Thief",
-        productVersion: "1.0",
-      };
+        var buildUrl = "Build";
+        var loaderUrl = buildUrl + "/CatchTheThiefWeb.loader.js";
+
+		// Function to log the zoom percentage, unityDevicePixelRatio, and FBO size
+		function logZoomPercentage() {
+			let zoomPercentage = window.devicePixelRatio * 100;
+			var systemPixelRatio = window.devicePixelRatio || 1;
+			var desiredPixelRatio = 1; // Target devicePixelRatio for Unity
+			var unityDevicePixelRatio = desiredPixelRatio / systemPixelRatio;
+
+			// Get the canvas element
+			let canvas = document.getElementById("unity-canvas");
+
+			// Use canvas's width and height directly from the rendering resolution
+			let fboWidth = Math.floor(canvas.width);  // Actual rendering width in pixels
+			let fboHeight = Math.floor(canvas.height); // Actual rendering height in pixels
+
+			// Log zoom percentage, unityDevicePixelRatio, and FBO size
+			console.log(`Zoom Percentage: ${zoomPercentage}%`);
+			console.log(`Unity Device Pixel Ratio: ${unityDevicePixelRatio}`);
+			console.log(`Calculated FBO size: ${fboWidth}x${fboHeight}`);
+		}
+
+		// Call the function to log the zoom percentage on page load
+		logZoomPercentage();
+
+		// Optionally, log zoom percentage and FBO size when the user resizes the window
+		window.addEventListener('resize', logZoomPercentage);
+
+        // Dynamically set devicePixelRatio to counteract system scaling
+        var systemPixelRatio = window.devicePixelRatio || 1;
+        var desiredPixelRatio = 1; // Target devicePixelRatio for Unity
+        var unityDevicePixelRatio = desiredPixelRatio / systemPixelRatio;
+
+		function getDevicePixelRatio() {
+			// Get the current devicePixelRatio (browser zoom + system scaling)
+			const devicePixelRatio = window.devicePixelRatio || 1;
+
+			// Apply an additional scaling factor for sharper rendering
+			const extraScalingFactor = 1.76; // You can adjust this factor as needed
+
+			// Final device pixel ratio is the product of both
+			const finalDevicePixelRatio = devicePixelRatio * extraScalingFactor;
+
+			// Log for debugging
+			console.log(`Detected devicePixelRatio: ${devicePixelRatio}`);
+			console.log(`Final devicePixelRatio with extra scaling: ${finalDevicePixelRatio}`);
+
+			return finalDevicePixelRatio;
+		}
+
+		// Unity configuration, using the dynamically calculated devicePixelRatio
+		var config = {
+			dataUrl: buildUrl + "/CatchTheThiefWeb.data",
+			frameworkUrl: buildUrl + "/CatchTheThiefWeb.framework.js",
+			codeUrl: buildUrl + "/CatchTheThiefWeb.wasm",
+			streamingAssetsUrl: "StreamingAssets",
+			companyName: "DefaultCompany",
+			productName: "Catch The Thief",
+			productVersion: "1.0",
+			devicePixelRatio: getDevicePixelRatio() // Apply the dynamic devicePixelRatio with extra scaling
+		};
+
 
         // Prevent context menu on right-click
         document.addEventListener('contextmenu', event => event.preventDefault());
+
+        // Prevent browser zooming via keyboard and mouse wheel
+        document.addEventListener('keydown', function(event) {
+            if (event.ctrlKey && (event.key === '+' || event.key === '-' || event.key === '=' || event.key === '_')) {
+                event.preventDefault();
+            }
+        });
+        document.addEventListener('wheel', function(event) {
+            if (event.ctrlKey) {
+                event.preventDefault();
+            }
+        }, { passive: false });
 
         let canvas = document.getElementById("unity-canvas");
         let container = document.getElementById("unity-container");
@@ -222,24 +289,48 @@
             initializing = false;
         }
 
-        function resizeCanvas() {
-            const aspectRatio = 9 / 16;
-            let width, height;
-            let availableWidth = window.innerWidth;
-            let availableHeight = window.innerHeight;
+		function resizeCanvas() {
+			const aspectRatio = 9 / 16;
+			let width, height;
 
-            if (availableHeight * aspectRatio <= availableWidth) {
-                height = availableHeight;
-                width = height * aspectRatio;
-            } else {
-                width = availableWidth;
-                height = width / aspectRatio;
-            }
+			// Use window.innerWidth and window.innerHeight for both modes
+			let availableWidth = window.innerWidth;
+			let availableHeight = window.innerHeight;
 
-            canvas.style.width = width + 'px';
-            canvas.style.height = height + 'px';
-            canvas.style.marginTop = ((availableHeight - height) / 2) + 'px';
-        }
+			// Calculate the ideal width and height to maintain aspect ratio
+			if (availableHeight * aspectRatio <= availableWidth) {
+				height = availableHeight;
+				width = height * aspectRatio;
+			} else {
+				width = availableWidth;
+				height = width / aspectRatio;
+			}
+
+			// Set the canvas size in CSS pixels
+			canvas.style.width = width + 'px';
+			canvas.style.height = height + 'px';
+
+			// Adjust based on the dynamically calculated devicePixelRatio
+			let devicePixelRatio = getDevicePixelRatio();
+
+			// Set the canvas size in actual pixels for sharpness
+			canvas.width = Math.floor(width * devicePixelRatio);
+			canvas.height = Math.floor(height * devicePixelRatio);
+
+			// Log for debugging
+			console.log(`Final devicePixelRatio used: ${devicePixelRatio}`);
+			console.log(`Canvas width: ${canvas.width}, height: ${canvas.height}`);
+
+			// Center the canvas within the container
+			canvas.style.marginTop = ((availableHeight - height) / 2) + 'px';
+		}
+
+		// Listen for changes in fullscreen mode and window resize
+		document.addEventListener('fullscreenchange', resizeCanvas);
+		window.addEventListener('resize', resizeCanvas);
+
+		// Call the resize function when the page loads
+		window.addEventListener('load', resizeCanvas);
 
         // Fullscreen toggle with F11 key
         document.addEventListener("keydown", function(event) {
@@ -289,5 +380,5 @@
 
         document.body.appendChild(script);
     </script>
-  </body>
+</body>
 </html>
