--- a/index.html
+++ b/index.html
@@ -177,18 +177,35 @@
       // Detect mobile devices
       var isMobile = /Mobi|Android/i.test(navigator.userAgent);
 
-      function getDevicePixelRatio() {
-        let devicePixelRatio = window.devicePixelRatio || 1;
+		function getDevicePixelRatio() {
+			// Get the default device pixel ratio from the browser
+			let devicePixelRatio = window.devicePixelRatio || 1;
 
-        // If it's a desktop, apply extra scaling for higher quality
-        if (!isMobile) {
-          const extraScalingFactor = 1.76;
-          devicePixelRatio = devicePixelRatio * extraScalingFactor;
-        }
+			// Detect mobile devices (use native ratio for mobile)
+			var isMobile = /Mobi|Android/i.test(navigator.userAgent);
 
-        console.log(`Final devicePixelRatio: ${devicePixelRatio} (Mobile: ${isMobile})`);
-        return devicePixelRatio;
-      }
+			if (!isMobile) {
+				// Get screen dimensions
+				const screenWidth = window.screen.width;
+				const screenHeight = window.screen.height;
+
+				// Calculate aspect ratio
+				const aspectRatio = screenWidth / screenHeight;
+
+				// Set the extra scaling factor to the aspect ratio
+				let extraScalingFactor = aspectRatio.toFixed(2);
+
+				// Apply the calculated scaling factor based on the aspect ratio
+				devicePixelRatio = devicePixelRatio * extraScalingFactor;
+
+				console.log(`Screen Resolution: ${screenWidth}x${screenHeight}`);
+				console.log(`Aspect Ratio: ${aspectRatio.toFixed(2)}`);
+				console.log(`Calculated Extra Scaling Factor (Aspect Ratio): ${extraScalingFactor}`);
+			}
+
+			console.log(`Final devicePixelRatio: ${devicePixelRatio} (Mobile: ${isMobile})`);
+			return devicePixelRatio;
+		}
 
 		// Unity configuration, using the dynamically calculated devicePixelRatio
 		var config = {
