--- a/index.html
+++ b/index.html
@@ -181,27 +181,28 @@
 			// Get the default device pixel ratio from the browser
 			let devicePixelRatio = window.devicePixelRatio || 1;
 
-			// Detect mobile devices (use native ratio for mobile)
-			var isMobile = /Mobi|Android/i.test(navigator.userAgent);
+			// Detect mobile devices (Android, iPhone, iPad, iPod)
+			//var isMobile = /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
 
-			if (!isMobile) {
-				// Get screen dimensions
-				const screenWidth = window.screen.width;
-				const screenHeight = window.screen.height;
 
-				// Calculate aspect ratio
-				const aspectRatio = screenWidth / screenHeight;
+			//if (!isMobile) {
+			// Get screen dimensions
+			const screenWidth = window.screen.width;
+			const screenHeight = window.screen.height;
 
-				// Set the extra scaling factor to the aspect ratio
-				let extraScalingFactor = aspectRatio.toFixed(2);
+			// Calculate aspect ratio
+			const aspectRatio = screenWidth / screenHeight;
 
-				// Apply the calculated scaling factor based on the aspect ratio
-				devicePixelRatio = devicePixelRatio * extraScalingFactor;
+			// Set the extra scaling factor to the aspect ratio
+			let extraScalingFactor = aspectRatio.toFixed(2);
 
-				console.log(`Screen Resolution: ${screenWidth}x${screenHeight}`);
-				console.log(`Aspect Ratio: ${aspectRatio.toFixed(2)}`);
-				console.log(`Calculated Extra Scaling Factor (Aspect Ratio): ${extraScalingFactor}`);
-			}
+			// Apply the calculated scaling factor based on the aspect ratio
+			devicePixelRatio = devicePixelRatio * extraScalingFactor;
+
+			console.log(`Screen Resolution: ${screenWidth}x${screenHeight}`);
+			console.log(`Aspect Ratio: ${aspectRatio.toFixed(2)}`);
+			console.log(`Calculated Extra Scaling Factor (Aspect Ratio): ${extraScalingFactor}`);
+			//}
 
 			console.log(`Final devicePixelRatio: ${devicePixelRatio} (Mobile: ${isMobile})`);
 			return devicePixelRatio;
