--- a/index.html
+++ b/index.html
@@ -143,32 +143,6 @@
         var buildUrl = "Build";
         var loaderUrl = buildUrl + "/CatchTheThiefWeb.loader.js";
 
-		// Function to log the zoom percentage, unityDevicePixelRatio, and FBO size
-		function logZoomPercentage() {
-			let zoomPercentage = window.devicePixelRatio * 100;
-			var systemPixelRatio = window.devicePixelRatio || 1;
-			var desiredPixelRatio = 1; // Target devicePixelRatio for Unity
-			var unityDevicePixelRatio = desiredPixelRatio / systemPixelRatio;
-
-			// Get the canvas element
-			let canvas = document.getElementById("unity-canvas");
-
-			// Use canvas's width and height directly from the rendering resolution
-			let fboWidth = Math.floor(canvas.width);  // Actual rendering width in pixels
-			let fboHeight = Math.floor(canvas.height); // Actual rendering height in pixels
-
-			// Log zoom percentage, unityDevicePixelRatio, and FBO size
-			console.log(`Zoom Percentage: ${zoomPercentage}%`);
-			console.log(`Unity Device Pixel Ratio: ${unityDevicePixelRatio}`);
-			console.log(`Calculated FBO size: ${fboWidth}x${fboHeight}`);
-		}
-
-		// Call the function to log the zoom percentage on page load
-		logZoomPercentage();
-
-		// Optionally, log zoom percentage and FBO size when the user resizes the window
-		window.addEventListener('resize', logZoomPercentage);
-
         // Dynamically set devicePixelRatio to counteract system scaling
         var systemPixelRatio = window.devicePixelRatio || 1;
         var desiredPixelRatio = 1; // Target devicePixelRatio for Unity
@@ -199,9 +173,9 @@
 				// Apply the calculated scaling factor based on the aspect ratio
 				devicePixelRatio = devicePixelRatio * extraScalingFactor;
 
-				console.log(`Screen Resolution: ${screenWidth}x${screenHeight}`);
-				console.log(`Aspect Ratio: ${aspectRatio.toFixed(2)}`);
-				console.log(`Calculated Extra Scaling Factor (Aspect Ratio): ${extraScalingFactor}`);
+				//console.log(`Screen Resolution: ${screenWidth}x${screenHeight}`);
+				//console.log(`Aspect Ratio: ${aspectRatio.toFixed(2)}`);
+				//console.log(`Calculated Extra Scaling Factor (Aspect Ratio): ${extraScalingFactor}`);
 			}
 
 			console.log(`Final devicePixelRatio: ${devicePixelRatio} (Mobile: ${isMobile})`);
@@ -336,8 +310,8 @@
 			canvas.height = Math.floor(height * devicePixelRatio);
 
 			// Log for debugging
-			console.log(`Final devicePixelRatio used: ${devicePixelRatio}`);
-			console.log(`Canvas width: ${canvas.width}, height: ${canvas.height}`);
+			//console.log(`Final devicePixelRatio used: ${devicePixelRatio}`);
+			//console.log(`Canvas width: ${canvas.width}, height: ${canvas.height}`);
 
 			// Center the canvas within the container
 			canvas.style.marginTop = ((availableHeight - height) / 2) + 'px';
