--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Catch The Thief</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <style>
         html, body {
             height: 100%;
@@ -143,11 +143,6 @@
         var buildUrl = "Build";
         var loaderUrl = buildUrl + "/CatchTheThiefWeb.loader.js";
 
-        // Dynamically set devicePixelRatio to counteract system scaling
-        var systemPixelRatio = window.devicePixelRatio || 1;
-        var desiredPixelRatio = 1; // Target devicePixelRatio for Unity
-        var unityDevicePixelRatio = desiredPixelRatio / systemPixelRatio;
-
 		function getDevicePixelRatio() {
 			// Get the default device pixel ratio from the browser
 			let devicePixelRatio = window.devicePixelRatio || 1;
@@ -188,7 +183,8 @@
 			companyName: "DefaultCompany",
 			productName: "Catch The Thief",
 			productVersion: "1.0",
-			devicePixelRatio: getDevicePixelRatio() // Apply the dynamic devicePixelRatio with extra scaling
+			//devicePixelRatio: 1, // Prevent Unity from adjusting for devicePixelRatio
+			matchWebGLToCanvasSize: false,
 		};
 
 
@@ -278,48 +274,43 @@
             initializing = false;
         }
 
-		function resizeCanvas() {
-			const aspectRatio = 9 / 16;
-			let width, height;
+        function resizeCanvas() {
+            const aspectRatio = 9 / 16;
+			const devicePixelRatio = window.devicePixelRatio || 1;
+            let availableWidth = window.innerWidth;
+            let availableHeight = window.innerHeight;
 
-			// Use window.innerWidth and window.innerHeight for both modes
-			let availableWidth = window.innerWidth;
-			let availableHeight = window.innerHeight;
+			// Calculate the CSS size of the canvas
+			let cssWidth, cssHeight;
 
-			// Calculate the ideal width and height to maintain aspect ratio
 			if (availableHeight * aspectRatio <= availableWidth) {
-				height = availableHeight;
-				width = height * aspectRatio;
+				cssHeight = availableHeight;
+				cssWidth = cssHeight * aspectRatio;
 			} else {
-				width = availableWidth;
-				height = width / aspectRatio;
+				cssWidth = availableWidth;
+				cssHeight = cssWidth / aspectRatio;
 			}
 
-			// Set the canvas size in CSS pixels
-			canvas.style.width = width + 'px';
-			canvas.style.height = height + 'px';
+			// Calculate the canvas's actual rendering size
+			let renderWidth = Math.round(cssWidth * devicePixelRatio);
+			let renderHeight = Math.round(cssHeight * devicePixelRatio);
 
-			// Adjust based on the dynamically calculated devicePixelRatio
-			let devicePixelRatio = getDevicePixelRatio();
+			// Set the canvas rendering size
+			canvas.width = renderWidth;
+			canvas.height = renderHeight;
 
-			// Set the canvas size in actual pixels for sharpness
-			canvas.width = Math.floor(width * devicePixelRatio);
-			canvas.height = Math.floor(height * devicePixelRatio);
-
-			// Log for debugging
-			//console.log(`Final devicePixelRatio used: ${devicePixelRatio}`);
-			//console.log(`Canvas width: ${canvas.width}, height: ${canvas.height}`);
+			// Set the canvas display size
+			canvas.style.width = cssWidth + 'px';
+			canvas.style.height = cssHeight + 'px';
 
 			// Center the canvas within the container
-			canvas.style.marginTop = ((availableHeight - height) / 2) + 'px';
+			canvas.style.marginLeft = ((availableWidth - cssWidth) / 2) + 'px';
+			canvas.style.marginTop = ((availableHeight - cssHeight) / 2) + 'px';
+
+			// Apply CSS to ensure pixelated rendering
+			canvas.style.imageRendering = 'pixelated'; // For modern browsers
+			canvas.style.imageRendering = 'crisp-edges'; // For older browsers
 		}
-
-		// Listen for changes in fullscreen mode and window resize
-		document.addEventListener('fullscreenchange', resizeCanvas);
-		window.addEventListener('resize', resizeCanvas);
-
-		// Call the resize function when the page loads
-		window.addEventListener('load', resizeCanvas);
 
         // Fullscreen toggle with F11 key
         document.addEventListener("keydown", function(event) {
